--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,11 +4,11 @@ body {
 
 #container {
     background-color:#3582DF ;
-    width: 1150px;
+    width: 95%;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 20px 20px rgba(43, 43, 51, 0.521);
-    padding: 0.13cm;
+    padding: 0.20cm;
     border: 1px solid black !important;
     
 }
@@ -23,6 +23,15 @@ body {
 
 }
 
+
+
+#images{
+    position: fixed;
+    top: 5px;
+    padding-top: 1em;
+    
+    
+}
 #admin{
     position: fixed;
     top: 45px;
