--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,6 +40,9 @@
             </div>
                         
             <input id="textField" type="text" autofocus="autofocus" onkeypress="return isEnter(event)" placeholder="Type here.">
+            <form id="search-form" type="text" class="search-form">
+              <input type="text">
+            </form>
         </div>
         <p class="threadbtn">
           <a href="#" class="btn btn-lg btn-secondary">Create a new thread</a>
@@ -54,7 +57,8 @@
     </div>
 
     <!-- Optional JavaScript -->
-    <script src="js/chatbot.js"></script>
+    
+    
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -71,5 +75,8 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    
+    <script src="js/chatbot.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   </body>
 </html>
