Gets text from box now

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,9 +39,9 @@
                 
             </div>
                         
-            <input id="textField" type="text" autofocus="autofocus" onkeypress="return isEnter(event)" placeholder="Type here.">
+
             <form id="search-form" type="text" class="search-form">
-              <input type="text">
+              <input id="textField" type="text" placeholder="Type here.">
             </form>
         </div>
         <p class="threadbtn">
