--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,7 +26,6 @@
             Chatbot
             <img class="images" height="60px" width="60px" src="../static/images/botpic.gif"  th:src="@{/images/botpic.gif}"/>
             <img class="images" height="70px" width="70px"  src="../static/images/uob.svg"  th:src="@{/images/uob.svg}"/> </a></h3>
-
           <nav class="nav nav-masthead justify-content-center">
             <a class="btn btn-info" href="/admin" role="button" method="get" act>Admin</a>
           </nav>
@@ -35,22 +34,57 @@
 
       <main role="main" class="inner cover">
         <!--h1 class="cover-heading">Cover your page.</h1> -->
-        <p class="lead">The 'bot' will check previously answered blackboard forum questions and return any matches, if you're question is still not answered then create a new thread.<br></br>Ask a question!</p>
-        <div id="interface">
-            <div id="chatBox">
-                <div id="chatText">
-                    
-                </div>
-                
-            </div>
-                        
+        <p class="lead">What would you like to do?</p>
 
-            <form id="search-form" type="text" class="search-form">
-              <input id="textField" type="text" placeholder="Type here.">
-            </form>
-        </div>
-        <p class="threadbtn">
-          <a href="#" class="btn btn-lg btn-secondary">Create a new thread</a>
+        <a class="btn btn-info" href="/admin" role="button" method="get" act>View all threads</a> <br></br>
+        
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addThreadModal">
+            Add a thread
+        </button>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="addThreadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title text-dark" id="exampleModalLabel">Specify thread details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    <form class="text-dark">
+                        <div class="form-group">
+                          <label for="ID-input">Thread-ID</label>
+                          <input type="ID" class="form-control" id="ID-input" aria-describedby="emailHelp" placeholder="Enter ID">
+                          
+                        </div>
+                        <div class="form-group">
+                            <label for="Date-input">Date Submitted</label>
+                            <input type="date" class="form-control" id="Date-input" placeholder="...">
+                          </div>
+                        <div class="form-group">
+                          <label for="Question-input">Question</label>
+                          <input type="text" class="form-control" id="Question-input" placeholder="...">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="Answer-input">Answer</label>
+                            <input type="text" class="form-control" id="Answer-input" placeholder="...">
+                          </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button id="addThreadSubmit" type="button" class="btn btn-success" >Add thread</button>
+                </div>
+            </div>
+            </div>
+        </div> <br></br>
+
+        <a class="btn btn-danger" href="/admin" role="button" method="get" act>Delete a thread</a>
+        
         </p>
       </main>
 
@@ -82,7 +116,7 @@
     ></script>
     
     <script src="js/chatbot.js"></script>
-    <!-- Temp link while developing--> 
+    <!-- Temp link while developing-->
     <script src="../static/js/chatbot.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   </body>
