--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -60,17 +60,23 @@
                           <input type="ID" class="form-control" id="ID-input" aria-describedby="emailHelp" placeholder="Enter ID">
                           
                         </div>
+
+                        <div class="form-group">
+                          <label for="subID-input">Subthread-ID</label>
+                          <input type="ID" class="form-control" id="subID-input" aria-describedby="emailHelp" placeholder="Enter subID">
+                          
+                        </div>
                         <div class="form-group">
                             <label for="Date-input">Date Submitted</label>
                             <input type="date" class="form-control" id="Date-input" placeholder="...">
                           </div>
                         <div class="form-group">
-                          <label for="Question-input">Question</label>
-                          <input type="text" class="form-control" id="Question-input" placeholder="...">
+                          <label for="Body-input">Body</label>
+                          <textarea type="text" class="form-control id="Body-input" placeholder="..."></textarea>
                         </div>
 
                         <div class="form-group">
-                            <label for="Answer-input">Answer</label>
+                            <label for="Answer-input">Q or A</label>
                             <input type="text" class="form-control" id="Answer-input" placeholder="...">
                           </div>
                     </form>
