--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,9 +26,7 @@
             Chatbot
             <img class="images" height="60px" width="60px" src="../static/images/botpic.gif"  th:src="@{/images/botpic.gif}"/>
             <img class="images" height="70px" width="70px"  src="../static/images/uob.svg"  th:src="@{/images/uob.svg}"/> </a></h3>
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="btn btn-info" href="/admin" role="button" method="get" act>Admin</a>
-          </nav>
+          <h4 class = "masthead-heading">Admin mode</h4>
         </div>
       </header>
 
@@ -36,7 +34,7 @@
         <!--h1 class="cover-heading">Cover your page.</h1> -->
         <p class="lead">What would you like to do?</p>
 
-        <a class="btn btn-info" href="/admin" role="button" method="get" act>View all threads</a> <br></br>
+        <!-- <a class="btn btn-info" href="/admin" role="button" method="get" act>View all threads</a> <br></br> -->
         
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addThreadModal">
@@ -72,13 +70,18 @@
                           </div>
                         <div class="form-group">
                           <label for="Body-input">Body</label>
-                          <textarea type="text" class="form-control id="Body-input" placeholder="..."></textarea>
+                          <textarea type="text" class="form-control" id="Body-input" placeholder="..."></textarea>
                         </div>
 
-                        <div class="form-group">
-                            <label for="Answer-input">Q or A</label>
-                            <input type="text" class="form-control" id="Answer-input" placeholder="...">
-                          </div>
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                          <label class="btn btn-secondary active">
+                            <input type="radio" name="options" id="q" autocomplete="off" checked> Question
+                          </label>
+                          <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="a" autocomplete="off"> Answer
+                          </label>
+                         
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -89,7 +92,7 @@
             </div>
         </div> <br></br>
 
-        <a class="btn btn-danger" href="/admin" role="button" method="get" act>Delete a thread</a>
+        <!-- <a class="btn btn-danger" href="/admin" role="button" method="get" act>Delete a thread</a> -->
         
         </p>
       </main>
@@ -103,13 +106,11 @@
 
     <!-- Optional JavaScript -->
     
-    
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -124,6 +125,6 @@
     <script src="js/chatbot.js"></script>
     <!-- Temp link while developing-->
     <script src="../static/js/chatbot.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    
   </body>
 </html>
