--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,3 +1,7 @@
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" /> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -52,10 +56,10 @@
                 </button>
                 </div>
                 <div class="modal-body">
-                    <form class="text-dark">
+                    <form class="text-dark" role="form" id="modalValidation">
                         <div class="form-group">
                           <label for="ID-input">Thread-ID</label>
-                          <input type="ID" class="form-control" id="ID-input" aria-describedby="emailHelp" placeholder="Enter ID">
+                          <input type="ID" class="form-control" id="idInput" aria-describedby="emailHelp" placeholder="Enter ID">
                           
                         </div>
 
@@ -66,11 +70,11 @@
                         </div>
                         <div class="form-group">
                             <label for="Date-input">Date Submitted</label>
-                            <input type="date" class="form-control" id="Date-input" placeholder="...">
+                            <input type="date" class="form-control" id="dateInput" placeholder="...">
                           </div>
                         <div class="form-group">
                           <label for="Body-input">Body</label>
-                          <textarea type="text" class="form-control" id="Body-input" placeholder="..."></textarea>
+                          <textarea type="text" class="form-control" id="bodyInput" placeholder="..."></textarea>
                         </div>
 
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
@@ -82,11 +86,15 @@
                           </label>
                          
                         </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button id="addThreadSubmit" type="submit" class="btn btn-success" >Add thread</button>
+                        </div>
                     </form>
-                </div>
-                <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button id="addThreadSubmit" type="button" class="btn btn-success" >Add thread</button>
+                    <div class="alert alert-info fade in" id="bsalert">
+                      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                      <strong>Info!</strong> I am crying
+                    </div>
                 </div>
             </div>
             </div>
@@ -111,6 +119,7 @@
     
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -124,7 +133,7 @@
     
     <script src="js/chatbot.js"></script>
     <!-- Temp link while developing-->
-    <script src="../static/js/chatbot.js"></script>
+    <!-- <script src="../static/js/chatbot.js"></script> -->
     
   </body>
 </html>
