--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,7 +1,31 @@
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" /> -->
+<!-- this goes first -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/css/bootstrapvalidator.min.css"></script>
+
+"
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+<!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" /> -->
+<!-- <script
+  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+  crossorigin="anonymous"
+></script> -->
+    
+<script src="js/chatbot.js"></script>
+<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+<!-- <script src="js/bootstrap.min.js"></script> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,8 +41,8 @@
     <link href="css/chatbot.css" rel="stylesheet"/>
     <!-- temp links below while developing -->
 
-    <link href="../static/css/bootstrap.min.css"  rel="stylesheet" />
-    <link href="../static/css/chatbot.css" rel="stylesheet"/>
+    <!-- <link href="../static/css/bootstrap.min.css"  rel="stylesheet" />
+    <link href="../static/css/chatbot.css" rel="stylesheet"/> -->
 
     <title>Chatbot</title>
   </head>
@@ -57,44 +81,36 @@
                 </div>
                 <div class="modal-body">
                     <form class="text-dark" role="form" id="modalValidation">
+                        <label for="ID-input">Thread-ID</label>
                         <div class="form-group">
-                          <label for="ID-input">Thread-ID</label>
-                          <input type="ID" class="form-control" id="idInput" aria-describedby="emailHelp" placeholder="Enter ID">
-                          
+                          <input type="text" class="form-control" id="idInput" name="idInput" placeholder="Enter ID" required>
                         </div>
 
+                        <label for="subID-input">Subthread-ID</label>
                         <div class="form-group">
-                          <label for="subID-input">Subthread-ID</label>
-                          <input type="ID" class="form-control" id="subID-input" aria-describedby="emailHelp" placeholder="Enter subID">
-                          
+                            <input type="text" class="form-control" id="subID-input" name="subID-input" placeholder="Enter subID" required>
                         </div>
+                        <label for="Date-input">Date Submitted</label>
                         <div class="form-group">
-                            <label for="Date-input">Date Submitted</label>
                             <input type="date" class="form-control" id="dateInput" placeholder="...">
-                          </div>
-                        <div class="form-group">
-                          <label for="Body-input">Body</label>
-                          <textarea type="text" class="form-control" id="bodyInput" placeholder="..."></textarea>
                         </div>
-
+                        <label for="Body-input">Body</label>
+                        <div class="form-group">
+                            <textarea type="text" class="form-control" id="bodyInput" name="bodyInput" placeholder="..." required></textarea>
+                        </div>
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                          <label class="btn btn-secondary active">
                             <input type="radio" name="options" id="q" autocomplete="off" checked> Question
-                          </label>
-                          <label class="btn btn-secondary">
                             <input type="radio" name="options" id="a" autocomplete="off"> Answer
-                          </label>
-                         
                         </div>
                         <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button id="addThreadSubmit" type="submit" class="btn btn-success" >Add thread</button>
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          <input type="submit" class="btn btn-success" id="addThreadSubmit"/>
                         </div>
                     </form>
-                    <div class="alert alert-info fade in" id="bsalert">
+                    <!-- <div class="alert alert-info fade in" id="bsalert">
                       <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                       <strong>Info!</strong> I am crying
-                    </div>
+                    </div> -->
                 </div>
             </div>
             </div>
@@ -111,29 +127,5 @@
         </div>
       </footer>
     </div>
-
-    <!-- Optional JavaScript -->
-    
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    
-    <script src="js/chatbot.js"></script>
-    <!-- Temp link while developing-->
-    <!-- <script src="../static/js/chatbot.js"></script> -->
-    
   </body>
 </html>
