--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -139,6 +139,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" id="btnDelete">Delete</button>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
