--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -86,7 +86,7 @@
                                 </div>
                             </div>
 
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons" id="qa">
                                 <label class="btn btn-secondary active">
                                     <input type="radio" name="options" id="q" autocomplete="off" checked> Question
                                 </label>
