tidied up the code

--- a/src/main/resources/static/css/chatbot.css
+++ b/src/main/resources/static/css/chatbot.css
@@ -72,6 +72,7 @@ h3 {
   padding: .3em;
   float: left;
   margin-left:10px;
+  margin-right:150px;
 	position: relative;
 	background: #00aabb;
 	border-radius: .4em;
@@ -96,6 +97,7 @@ h3 {
   padding: .3em;
   float: left;
   margin-left:10px;
+  margin-right:150px;
 	position: relative;
 	background: #eedf07;
 	border-radius: .4em;
@@ -119,6 +121,7 @@ h3 {
 .speech-bubble-user {
   padding: .5em;
   margin-right:10px;
+  margin-left:150px;
   float: right;
 	position: relative;
 	background: #2fbb00;
